// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`css > elif 1`] = `
"body {
content: \\"TEST\\";
}
"
`;

exports[`css > else 1`] = `
"body {
content: \\"!DEV else\\";
}
"
`;

exports[`css > if 1`] = `
"body {
content: \\"DEV\\";
}
"
`;

exports[`css > nested 1`] = `
"body {
content: \\"else\\";
}
"
`;

exports[`html > elif 1`] = `
"<div>TEST</div>
"
`;

exports[`html > else 1`] = `
"<div>!DEV else</div>
"
`;

exports[`html > if 1`] = `
"<div>DEV</div>
"
`;

exports[`html > nested 1`] = `
"<div>
<div>else</div>
</div>
"
`;

exports[`js > elif 1`] = `
"console.log(\\"TEST\\")
"
`;

exports[`js > else 1`] = `
"console.log(\\"!DEV else\\")
"
`;

exports[`js > if 1`] = `
"console.log(\\"DEV\\")
"
`;

exports[`js > nested 1`] = `
"console.log(\\"else\\")
"
`;
